# uplift-model-talk

./: README.md  pyproject.toml
nbs/: dataset.ipynb  uplift.ipynb  uplift_conversion.ipynb  uplift_visit.ipynb
src/: bins.py  curve.py  viz.py
