[project]
name = "uplift-model-talk"
version = "0.1.0"
description = ""
authors = [
    {name = "Avik Basu",email = "ab93@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "scikit-uplift (>=0.5.1,<0.6.0)",
    "causalml (>=0.15.5,<0.16.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
